# resalign-ai

./: .gitignore  CNAME  COOKIE_POLICY.md  DOCUMENTS_OVERVIEW.md  IMPLEMENTATION_CHECKLIST.md  LEGAL_CHECKLIST.md  LEGAL_DOCUMENTS_README.md  LICENSE  MIGRATION_GUIDE.md  PHASE_1_AGENTIC_IMPLEMENTATION_PLAN.md  PHASE_1_IMPLEMENTATION_SUMMARY.md  PRIVACY_POLICY.md  README.md  TERMS_OF_SERVICE.md
.github/: DEPLOYMENT_GUIDE.md
.github/workflows/: deploy-frontend.yml
backend/: README.md  main.py  requirements-dev.txt  requirements-new.txt  requirements.txt
backend/api/: __init__.py  _types.py  config.py  main.py
backend/api/_utils/: __init__.py  auth.py  extraction_helpers.py
backend/api/routes/: __init__.py  analyze.py  extract.py  health.py  upload.py
backend/api/services/: __init__.py  fit_rationale_service.py  geval_service.py  learning_resource_service.py  llm_service.py  matcher.py  reducto.py  resume_recommendation_service.py  scorer.py  supabase.py
backend/api/types/: analysis.py  extraction.py  resume.py  upload.py
backend/email-templates/: README.md  SETUP_INSTRUCTIONS.md  preview-example.html  waitlist-confirmation.html
docs/architecture/: AGENTIC_ARCHITECTURE.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: AnalysisProgressModal.tsx  AnalysisReport.tsx  DashboardLayout.tsx  ProtectedRoute.tsx  WaitlistModal.tsx  mode-toggle.tsx  theme-provider.tsx
frontend/src/components/ui/: sonner.tsx
frontend/src/contexts/: AuthContext.tsx  auth-context.ts
frontend/src/hooks/: useAnalyzeAPI.ts  useFileValidation.ts  useUploadAPI.ts  useUrlVerification.ts
frontend/src/lib/: animations.ts  config.ts  pdfConverter.ts  progressMessages.ts  supabase.ts  utils.ts
frontend/src/pages/: AnalysisResults.tsx  AuthCallback.tsx  Dashboard.tsx  FAQ.tsx  Features.tsx  Landing.tsx  Login.tsx  Navbar.tsx  Signup.tsx
frontend/src/types/: analysis.ts
sdk/: README.md  pyproject.toml
supabase/functions/send-waitlist-email/: index.ts
